--- a/css/main.css
+++ b/css/main.css
@@ -804,6 +804,8 @@ body {
     var(--dark-color) 60%
   );
   -webkit-mask-image: linear-gradient(to top, transparent 30%, #079097 60%);
+  mask-image: linear-gradient(to top, transparent 30%, #079097 60%);
+  
 }
 .flower__g-right--1 {
   -webkit-animation: flower-g-right-ans 2.5s linear infinite;
@@ -1054,6 +1056,7 @@ body {
   border-top-left-radius: 100%;
   border-left: 2vmin solid #079097;
   -webkit-mask-image: linear-gradient(to top, transparent 25%, #079097 50%);
+  mask-image: linear-gradient(to top, transparent 25%, #079097 50%);
   position: relative;
   z-index: 1;
 }
@@ -1072,6 +1075,12 @@ body {
     ),
     linear-gradient(to bottom right, #23f0ff 45%, transparent 50%, transparent);
     -webkit-mask-image: linear-gradient(
+    135deg,
+    #159faa 40%,
+    transparent 50%,
+    transparent
+  );
+  mask-image: linear-gradient(
     135deg,
     #159faa 40%,
     transparent 50%,
@@ -1210,6 +1219,11 @@ body {
     transparent 40%,
     #079097 80%
   ) !important;
+  mask-image: linear-gradient(
+    to top,
+    transparent 40%,
+    #079097 80%
+  ) !important;
 }
 .long-g--1 .leaf--1 {
   --w: 5vmin;
@@ -1231,6 +1245,11 @@ body {
     transparent 50%,
     #079097 80%
   ) !important;
+  mask-image: linear-gradient(
+    to top,
+    transparent 50%,
+    #079097 80%
+  ) !important;
 }
 .long-g--2 .leaf--1,
 .long-g--3 .leaf--1 {
@@ -1247,6 +1266,11 @@ body {
     transparent 40%,
     #079097 80%
   ) !important;
+  mask-image: linear-gradient(
+    to top,
+    transparent 40%,
+    #079097 80%
+  ) !important;
 }
 .long-g--4 {
   left: 25vmin;
@@ -1256,6 +1280,11 @@ body {
 }
 .long-g--4 .leaf {
   -webkit-mask-image: linear-gradient(
+    to top,
+    transparent 50%,
+    #079097 80%
+  ) !important;
+  mask-image: linear-gradient(
     to top,
     transparent 50%,
     #079097 80%
@@ -1292,6 +1321,11 @@ body {
   border-top-left-radius: 100%;
   border-left: 2vmin solid var(--c);
   -webkit-mask-image: linear-gradient(
+    to top,
+    transparent 20%,
+    var(--dark-color)
+  );
+  mask-image: linear-gradient(
     to top,
     transparent 20%,
     var(--dark-color)
